Fixed a bug where randomness wasn't properly in sync.